Fixed the width of the sidebar, got main to align correctly

--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,20 @@ body {
 h2 {
   font-size: 38px; }
 
+h3 {
+  font-size: 30px; }
+
 #sidebar {
-  right: 50px;
-  display: flex;
-  width: 20%;
-  flex-direction: column; }
+  display: inline-flex;
+  width: 160px;
+  height: 100vh;
+  flex-direction: column;
+  background-color: white;
+  position: fixed; }
   #sidebar #introduction {
-    padding-right: 20px;
-    width: inherit;
     position: fixed;
+    padding-right: 15px;
+    width: inherit;
     top: 45px;
     height: 300px;
     width: inherit;
@@ -27,13 +32,10 @@ h2 {
     flex-direction: column;
     align-items: flex-end; }
     #sidebar #introduction .portrait {
-      display: flex;
-      justify-content: flex-end;
-      width: 300px;
-      height: 300px; }
+      width: 150px;
+      height: 150px; }
       #sidebar #introduction .portrait img {
-        width: auto;
-        height: 100%; }
+        width: 100%; }
     #sidebar #introduction h2 {
       text-align: right; }
   #sidebar nav {
@@ -70,10 +72,11 @@ h2 {
           color: black; }
 
 main {
-  flex-basis: 80%;
-  display: block;
+  width: calc(100vw - 160px);
+  position: relative;
   padding-left: 70px;
-  padding-right: 30px;
+  padding-right: 70px;
+  margin-left: 160px;
   background-color: rgba(250, 250, 250, 0.93); }
   main section {
     margin-top: 100px;
