--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,17 +18,23 @@ h2 {
   font-size: 38px;
 }
 
+h3 {
+  font-size: 30px;
+}
+
 
 #sidebar {
-  right: 50px;
-  display: flex;
-  width: 20%;
+  // right: 50px;
+  display: inline-flex;
+  width: 160px;
+  height: 100vh;
   flex-direction: column;
-  // background-color: white;
+  background-color: white;
+  position: fixed;
   #introduction {
-    padding-right: 20px;
-    width: inherit;
     position: fixed;
+    padding-right: 15px;
+    width: inherit;
     top: 45px;
     height: 300px;
     width: inherit;
@@ -36,13 +42,13 @@ h2 {
     flex-direction: column;
     align-items: flex-end;
     .portrait {
-      display: flex;
-      justify-content: flex-end;
-      width: 300px;
-      height: 300px;
+      // display: flex;
+      // justify-content: flex-end;
+      width: 150px;
+      height: 150px;
       img {
-        width: auto;
-        height: 100%;
+        width: 100%;
+        // height: 100%;
       }
     }
     h2 {
@@ -94,20 +100,17 @@ h2 {
 }
 
 main {
-  h1 {
-
-  }
+  width: calc(100vw - 160px);
+  position: relative;
+  padding-left: 70px;
+  padding-right: 70px;
+  margin-left: 160px;
+  background-color: rgba(250, 250, 250, 0.93);
   section {
     margin-top: 100px;
     padding-bottom: 100px;
     border-bottom: 2px solid grey;
   }
-  flex-basis: 80%;
-  display: block;
-  // margin-top: 100px;
-  padding-left: 70px;
-  padding-right: 30px;
-  background-color: rgba(250, 250, 250, 0.93);
   #skills {
     margin-top: 100px;
     ul {
